# aoc-2024

./: README.md  dune-project
day1/: part1.ml  part2.ml
day2/: part1.ml  part2.ml
day3/: part1.ml  part2.ml
day4/: dune  part1.ml  part2.ml
day5/: dune  part1.ml  part2.ml
day6/: part1.ml
lib/: util.ml
