(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github dzajac95/aoc2024))

(authors "Dominik Zajac <dzajac95@gmail.com>")

(license LICENSE)

(package
 (name aoc2024)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
